# numcertain

./: README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  switcher.json  versions.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: CONTRIBUTING.rst
.github/workflows/: code.yml  docs.yml  linkcheck.yml
0.3.0/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
0.3.0/.doctrees/: environment.pickle  index.doctree  reference.doctree
0.3.0/.doctrees/how-to/: use-uncertain-type.doctree  use-with-numpy.doctree
0.3.0/.doctrees/tutorials/: installation.doctree
0.3.0/_modules/: index.html
0.3.0/explanations/: comparison.html  uncertainty-propagation.html
0.3.0/how-to/: use-uncertain-type.html  use-with-numpy.html
0.3.0/reference/: api.html  contributing.html
0.3.0/tutorials/: installation.html
docs/: conf.py  index.rst
docs/developer/how-to/: make-release.rst
docs/developer/tutorials/: dev-install.rst
docs/explanations/: uncertainty-propagation.rst
docs/user/how-to/: run-container.rst
docs/user/tutorials/: installation.rst
garryod-update-skeleton/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
garryod-update-skeleton/.doctrees/: environment.pickle
garryod-update-skeleton/.doctrees/developer/: index.doctree
garryod-update-skeleton/.doctrees/user/: index.doctree
garryod-update-skeleton/_modules/: index.html
garryod-update-skeleton/_static/: documentation_options.js
garryod-update-skeleton/developer/: index.html
garryod-update-skeleton/developer/explanations/: decisions.html
garryod-update-skeleton/developer/how-to/: build-docs.html  contribute.html  lint.html  make-release.html  run-tests.html  static-analysis.html  update-tools.html
garryod-update-skeleton/developer/reference/: standards.html
garryod-update-skeleton/developer/tutorials/: dev-install.html
garryod-update-skeleton/user/: index.html
garryod-update-skeleton/user/explanations/: comparison.html  docs-structure.html  uncertainty-propagation.html
garryod-update-skeleton/user/how-to/: run-container.html  use-uncertain-type.html  use-with-numpy.html
garryod-update-skeleton/user/reference/: api.html
garryod-update-skeleton/user/tutorials/: installation.html
main/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
main/.doctrees/: environment.pickle  genindex.doctree  index.doctree
main/_modules/: index.html
main/_static/: documentation_options.js
main/developer/: index.html
main/user/: index.html
master/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
master/.doctrees/: environment.pickle  index.doctree
master/_modules/: index.html
master/_static/: documentation_options.js
master/developer/: index.html
master/explanations/: comparison.html  uncertainty-propagation.html
master/how-to/: use-uncertain-type.html  use-with-numpy.html
master/reference/: api.html  contributing.html
master/tutorials/: installation.html
master/user/: index.html
src/numcertain/: __init__.py  _numcertain.c  _numcertain.pyi  npyuncertain.c  npyuncertain.h  numpy.c  pytype.c  uncertain.c  uncertain.h  uncertaindtype.c  uncertaindtype.h
tests/: test_boilerplate_removed.py  test_npyuncertain.py  test_numpy.py
(+82 files in other folders)
